--- a/styles/file-manager.css
+++ b/styles/file-manager.css
@@ -2,31 +2,6 @@
   overflow: hidden;
 }
 
-.dashboard__wrapper {
-  display: grid;
-  grid-template-columns: 360px 1fr;
-  transition: grid-template-columns .3s cubic-bezier(0, 0.52, 0.23, 1);
-}
-
-.dashboard__wrapper.hidden {
-  grid-template-columns: 0 1fr;
-}
-
-/* Hide navigation from DOM to prevent selection by keyboard after collapsing */
-.dashboard__wrapper.hidden .dashboard__nav {
-  animation: hidden .3s ease-in-out forwards;
-}
-
-@keyframes hidden {
-  90% {
-    visibility: visible;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
-
-
 /* HEADER */
 .dashboard__header {
   grid-row: 1;
@@ -94,12 +69,44 @@
 }
 
 
+/* DASHBOARD MENU */
+.dashboard__wrapper {
+  display: grid;
+  grid-template-columns: 360px 1fr;
+  column-gap: var(--gap-48);
+  transition:
+    grid-template-columns .3s cubic-bezier(0, 0.5, 0.25, 1),
+    column-gap .3s cubic-bezier(0, 0.5, 0.25, 1);
+}
+
+.dashboard__wrapper.hidden {
+  grid-template-columns: 0 1fr;
+  column-gap: 0;
+  transition:
+    grid-template-columns .3s cubic-bezier(0.5, 0, 1, .5),
+    column-gap .3s cubic-bezier(0.5, 0, 1, .5);
+}
+
+/* Hide navigation from DOM to prevent selection by keyboard after collapsing */
+.dashboard__wrapper.hidden .dashboard__nav {
+  animation: hidden 5.3s ease-in-out forwards;
+}
+
+@keyframes hidden {
+  90% {
+    visibility: visible;
+  }
+
+  100% {
+    visibility: hidden;
+  }
+}
 
 /* NAVIGATION */
 .dashboard__nav {
   grid-row: 2;
   grid-column: 1;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 /* Prevent text collapse when hide navigation */
 .dashboard__nav * {
@@ -107,9 +114,9 @@
 }
 /* Adding padding to ath all children of navigation  */
 .dashboard__nav > * {
-  /* min-width: 265px; */
   padding-inline: var(--gap-48);
 }
+
 .nav__scroll {
   display: grid;
   grid-template-rows: 1fr auto auto;
@@ -123,7 +130,14 @@
     inset-inline-end: 0;
     inset-block: 0 5rem;
     background-color: var(--grey-200);
+    transition: opacity .3s ease-out;
+    transition-delay: .2s;
   }
+}
+.dashboard__wrapper.hidden .nav__scroll::before {
+  opacity: 0;
+  transition: opacity .2s ease-in;
+  transition-delay: 0s;
 }
 
 .nav__top,
@@ -218,20 +232,18 @@
   }
 }
 
-/* MAIN CONTENT */
+/* DAHSBOARD MAIN CONTENT */
 .dashboard__main {
   grid-row: 2;
   grid-column: 2;
-  min-width: 100%;
   overflow-x: hidden;
   height: calc(100vh - (var(--gap-48) + var(--gap-16) * 2));
   position: relative;
+  background-color: var(--white);
 }
 
 .container {
-  width: min(100vw, 1280px);
-  justify-self: center;
-  display: grid;
+  width: min(100%, 1280px);
   row-gap: var(--gap-16);
   margin-inline: auto;
 }
@@ -254,32 +266,36 @@
   padding-block-end: var(--gap-48);
 }
 
-.fm-filters,
-.fm-tb {
-  width: 100%;
-}
-
 .fm-filters {
-  padding-block: var(--gap-4) var(--gap-24);
-  overflow-x: hidden;
+  display: flex;
+  gap: var(--gap-24);
+  overflow-y: hidden;
   position: sticky;
   top: 0;
+  padding-block: var(--gap-4) var(--gap-24);
   background-color: var(--white);
   z-index: 1;
 }
 
-.fm-filters__scroll-area {
-  min-width: 100%;
-  display: flex;
-  gap: var(--gap-24);
+.fm-filters__btn {
+  aspect-ratio: 4 / 1;
+  padding: var(--gap-12) var(--gap-18);
+  border: 1.5px solid transparent;
+  border-radius: 5rem;
+  color: var(--grey-500);
+  font-size: var(--font-18);
+  font-weight: bold;
+  white-space: nowrap;
+  transition: all .3s ease-in-out;
+
+  &:not(.btn-selected) {
+    border-color: var(--grey-200);
+  }
 }
-
-
-.fm-tb__scroll-area {
-  min-width: 100%;
+/* TABLE */
+.fm-tb {
   display: grid;
   grid-template-columns: 1fr 12rem 6rem 11rem;
-  max-height: 500px;
 }
 
 .fm-tb__fm-header,
@@ -384,12 +400,24 @@
 
 
 @media screen and (max-width: 768px) {
+  /* Hide navigation mobile priority  */
   .dashboard__wrapper {
-    grid-template-columns: 100vw 0;
+    grid-template-columns: 0 1fr;
   }
 
   .dashboard__wrapper.hidden {
-    grid-template-columns: 0 1fr;
+    grid-template-columns: 100vw 0;
+  }
+
+  .dashboard__wrapper.hidden .dashboard__nav {
+    animation: none;
+  }
+  .dashboard__wrapper .dashboard__nav {
+    animation: hidden .3s ease-in-out forwards;
+  }
+
+  .nav__scroll > *{
+    max-width: 320px;
   }
 
   .user__name,
